#217983; #219041: release notes for 1.1.2 and ui tweaks changes

--- a/alias.config
+++ b/alias.config
@@ -4,6 +4,9 @@
  <!-- Doc Links - Identity Bridge - main-->
   <t:site key="IDBridgeDocs">/ib/</t:site>
 
+ <!-- Doc Links - Marketing Emails-->
+  <t:site key="IDBridgeRNsLatest">/ib/1.1.2/release-notes/rn-1.1.2.md</t:site>
+
  <!-- Installers -->
 
  <!-- EULA -->
